--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,127 @@
-body {
-    font-family: Arial, sans-serif;
+html, body {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
 }
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: linear-gradient(135deg, #000000, #1A1A2E, #16213E);
+    color: white;
+    font-family: 'Arial', sans-serif;
 }
-section {
+
+.header-bar {
+    flex-shrink: 0;
+    text-align: left;
+    padding: 20px;
+    background-color: rgba(0,0,0,0.3);
+    width: 80px;
+    height: 80px;
+}
+
+.header-logo {
+    width: 80px;
+    height: 80px;
+}
+
+.data-list {
+    padding-top: 60px;
+}
+
+.data-list-a {
+    text-decoration: none;
+    color: white;
+}
+
+.content {
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
 }
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+
+.gallery {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.project-card {
+    position: relative;
+    width: 250px;
+    height: 350px;
+    perspective: 1000px;
+    transition: transform 0.5s;
+}
+
+.project-card:hover {
+    transform: scale(1.05) rotateY(10deg);
+}
+
+.project-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    transition: filter 0.3s;
+}
+
+.project-card:hover img {
+    filter: brightness(70%);
+}
+
+.project-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.7);
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: 0.5s ease;
+}
+
+.project-card:hover .project-overlay {
+    height: 100%;
+}
+
+.project-text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.project-card:hover .project-text {
+    opacity: 1;
+}
+
+.files-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.files-button {
+    text-decoration: none;
+    color: black;
+    font-size: 100px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+footer {
+    flex-shrink: 0;
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(0,0,0,0.3);
 }
