--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     height: 80px;
 }
 
-.header-logo {
+.header-logo img {
     width: 80px;
     height: 80px;
 }
@@ -49,7 +49,7 @@ body {
 }
 
 .data-list {
-    padding-top: 60px;
+    padding-top: 20px;
 }
 
 .data-list-a {
@@ -78,6 +78,7 @@ body {
     height: 350px;
     perspective: 1000px;
     transition: transform 0.5s;
+    border-radius: 15px;
 }
 
 .project-card:hover {
@@ -101,11 +102,12 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(0,0,0,0.7);
+    background: rgba(0, 0, 0, 0.155);
     overflow: hidden;
     width: 100%;
     height: 0;
     transition: 0.5s ease;
+    border-radius: 15px;
 }
 
 .project-card:hover .project-overlay {
@@ -144,6 +146,16 @@ body {
 footer {
     flex-shrink: 0;
     text-align: center;
-    padding: 20px;
+    padding: 5px;
+    position: absolute;
+    bottom: 0;
+}
+
+footer:hover {
+    flex-shrink: 0;
+    text-align: center;
+    padding: 5px;
     background-color: rgba(0,0,0,0.3);
+    position: absolute;
+    bottom: 0;
 }
