--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ body {
     text-decoration: none;
     color: black;
     font-size: 100px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 footer {
